fix: fix center alignment for logo in menu

--- a/resources/skins.citizen.styles/Logo.less
+++ b/resources/skins.citizen.styles/Logo.less
@@ -1,6 +1,7 @@
 .mw-logo {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 
 	.mw-logo-wordmark {
 		color: var( --color-base );
